<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map location</string>
    <string name="action_share">Share</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Weather details</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_status_key" translatable="false">loc-status</string>
    <string name="pref_timezone_status_key" translatable="false">time-status</string>
    <string name="pref_current_location_desc">Use my location</string>
    <string name="pref_location_latitude" translatable="false">loc-latitude</string>
    <string name="pref_location_longitude" translatable="false">loc-longitude</string>
    <string name="pref_location_error_description">Invalid Location or server error(<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location \u2026(<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_server_down_description">Server is currently down(<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_no_network_description">No network connection(<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_not_set_description">Please set your location</string>
    <string name="pref_location_default" translatable="false">Sunnyvale</string>
    <string name="pref_units_label">Unit Setting</string>
    <string name="pref_units_default" translatable="false">imperial</string>
    <string name="pref_units_key" translatable="false">unit</string>
    <string name="pref_units_label_metric">Metric \u2103</string>
    <string name="pref_units_label_imperial">Imperial \u2109</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="image_attr">weather condition image</string>
    <string name="format_full_friendly_date" translatable="false"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>
    <string name="format_temperature" translatable="false"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="wind">Wind</string>
    <string name="format_wind_mph" translatable="false"><xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_wind_kmh" translatable="false"><xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="pressure">Pressure</string>
    <string name="format_pressure" translatable="false"><xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="humidity">Humidity</string>
    <string name="format_humidity" translatable="false"><xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="sync_account_type" translatable="false">sunshine.chriswang1990.upenn.com</string>
    <string name="content_authority" translatable="false">com.upenn.chriswang1990.sunshine</string>
    <string name="format_share_string">%1$s - %2$s - %3$s - %4$s/%5$s</string>
    <string name="format_notification"><xliff:g id="city">%1$s</xliff:g> : <xliff:g id="condition">%2$s</xliff:g> - <xliff:g id="high">%3$s</xliff:g>/<xliff:g id="low">%4$s</xliff:g></string>
    <string name="pref_last_notification" translatable="false">last_notification</string>
    <string name="pref_last_data_sync" translatable="false">last_data_sync</string>
    <string name="pref_is_default_location_changed" translatable="false">location_changed</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="empty_forecast_list">No weather information available. Please wait or try refreshing</string>
    <string name="empty_forecast_welcome">Welcome to Sunshine! Please set up your location and units preference in settings! (top right menu)</string>
    <string name="empty_forecast_list_no_network">Oops! The network is not available to fetch weather data.</string>
    <string name="empty_forecast_list_server_unknown">Updating weather data, please wait or try refreshing</string>
    <string name="empty_forecast_list_server_down">Oops! The server is not returning data. Please wait or try refreshing</string>
    <string name="empty_forecast_list_server_error">Oops! The server is not returning valid data. Please check for an updated version of Sunshine.</string>
    <string name="empty_forecast_list_invalid">Oops! The location in settings is not recognized or the server is not returning valid data. Please check the location setting and get an updated version of Sunshine.</string>
    <string name="a11y_city_name">City name: <xliff:g id="city">%1$s</xliff:g></string>
    <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_high_temp">High: <xliff:g id="high">%1$s</xliff:g></string>
    <string name="a11y_low_temp">Low: <xliff:g id="low">%1$s</xliff:g></string>
    <string name="a11y_humidity">Humidity: <xliff:g id="humidity">%1$s</xliff:g></string>
    <string name="a11y_pressure">Barometric Pressure: <xliff:g id="pressure">%1$s</xliff:g></string>
    <string name="a11y_wind">Wind speed and direction: <xliff:g id="wind">%1$s</xliff:g></string>
    <string name="condition_2xx">Storm</string>
    <string name="condition_3xx">Drizzle</string>
    <string name="condition_500">Light Rain</string>
    <string name="condition_501">Moderate Rain</string>
    <string name="condition_502">Heavy Rain</string>
    <string name="condition_503">Intense Rain</string>
    <string name="condition_504">Extreme Rain</string>
    <string name="condition_511">Freezing Rain</string>
    <string name="condition_520">Light Shower</string>
    <string name="condition_521">Shower</string>
    <string name="condition_522">Heavy Shower</string>
    <string name="condition_531">Ragged Shower</string>
    <string name="condition_600">Light Snow</string>
    <string name="condition_601">Snow</string>
    <string name="condition_602">Heavy Snow</string>
    <string name="condition_611">Sleet</string>
    <string name="condition_612">Shower Sleet</string>
    <string name="condition_615">Rain and Snow</string>
    <string name="condition_616">Rain and Snow</string>
    <string name="condition_620">Shower Snow</string>
    <string name="condition_621">Shower Snow</string>
    <string name="condition_622">Shower Snow</string>
    <string name="condition_701">Mist</string>
    <string name="condition_711">Smoke</string>
    <string name="condition_721">Haze</string>
    <string name="condition_731">Sand, Dust</string>
    <string name="condition_741">Fog</string>
    <string name="condition_751">Sand</string>
    <string name="condition_761">Dust</string>
    <string name="condition_762">Volcanic Ash</string>
    <string name="condition_771">Squalls</string>
    <string name="condition_781">Tornado</string>
    <string name="condition_800">Clear</string>
    <string name="condition_801">Mostly Clear</string>
    <string name="condition_802">Scattered Clouds</string>
    <string name="condition_803">Broken Clouds</string>
    <string name="condition_804">Overcast Clouds</string>
    <string name="condition_900">Tornado</string>
    <string name="condition_901">Tropical Storm</string>
    <string name="condition_902">Hurricane</string>
    <string name="condition_903">Cold</string>
    <string name="condition_904">Hot</string>
    <string name="condition_905">Windy</string>
    <string name="condition_906">Hail</string>
    <string name="condition_951">Calm</string>
    <string name="condition_952">Light Breeze</string>
    <string name="condition_953">Gentle Breeze</string>
    <string name="condition_954">Breeze</string>
    <string name="condition_955">Fresh Breeze</string>
    <string name="condition_956">Strong Breeze</string>
    <string name="condition_957">High Wind</string>
    <string name="condition_958">Gale</string>
    <string name="condition_959">Severe Gale</string>
    <string name="condition_960">Storm</string>
    <string name="condition_961">Violent Storm</string>
    <string name="condition_962">Hurricane</string>
    <string name="condition_unknown">Unknown (<xliff:g id="low">%1$s</xliff:g>)</string>
    <string name="powered_by_google">Powered by Google</string>
    <string name="last_location_key">last-location</string>
    <string name="timezone_warning">Weather update success but the timezone information is not valid. The weather data may not be consistent with the date</string>
    <string name="location_not_set_warning">"Please set your location in settings to get weather info!"</string>
    <string name="location_not_updated_warning">"Weather is not updated due to network or server problem, please try it later."</string>
    <string name="location_update_success">"Weather update success!"</string>
    <string name="sunshine_logo">Sunshine logo</string>
</resources>